Fix overflow issue of foundWordsContainer

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -261,12 +261,29 @@ body {
 
 #foundWordsContainer {
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
   border: 1px solid black;
   border-radius: 10px;
   padding: 1px;
   height: 20px;
   width: 90%;
   margin: 0 auto;
+  overflow: hidden;
+}
+
+#foundWordsContainer ul {
+  list-style-type: none; /* Removes bullet points */
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+}
+
+#foundWordsContainer ul li {
+  flex: 0 0 2%; /* Adjust width as needed */
+  padding: 5px;
+  user-select: none;
 }
